--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
 </head>
 
 <body>
-    <!-- HEADER -->
-    <header>
-        <!-- Update the class name to something related to your name for personal branding -->
-        <div class="container" id="myTopnav">
-            <!-- Update the logo text to your name -->
-            <a href="#" class="logo"><span>I</span>tay <span>N</span>ave</a>
-            <!-- Menu Icon for responsive design -->
-            <div class="menuIcon">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-            <!-- Navigation -->
-            <ul class="navlist">
-                <li><a class="nav-menu-btn active" href="#home">Home</a></li>
-                <li><a class="nav-menu-btn" href="#about">About</a></li>
-                <!-- <li><a class="nav-menu-btn" href="#portfolio">Portfolio</a></li> -->
-                <li><a class="nav-menu-btn" href="#experience">Experience</a></li>
-                <li><a class="nav-menu-btn" href="#skills">Skills</a></li>
-                <li><a class="nav-menu-btn" href="#contact">Contact</a></li>
-            </ul>
+
+    <!-- ======== HEADER ======== -->
+    <header class="header">
+
+        <!--div class="container" id="myTopnav"-->
+        <a href="#" class="logo"><span>I</span>tay <span>N</span>ave</a>
+        <nav class="navbar">
+            <a class="nav-menu-btn active" href="#home">Home</a>
+            <a class="nav-menu-btn" style="--i:0;" href="#about">About</a>
+            <!-- <a class="nav-menu-btn" style="--i:1;" href="#portfolio">Porfolio</a> -->
+            <a class="nav-menu-btn" style="--i:2;" href="#experience">Experience</a>
+            <a class="nav-menu-btn" style="--i:3;" href="#skills">Skills</a>
+            <a class="nav-menu-btn" style="--i:4;" href="#blog">Blog</a>
+            <a class="nav-menu-btn" style="--i:5;" href="#contact">Contact</a>
+        </nav>
+
+        <div class="menuIcon">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
         </div>
     </header>
 
@@ -155,9 +155,10 @@
                             </g>
                         </g>
 
-                        <image class="portrait" clip-path="url(#clipPath4)" x="0%" y="-25%" width="100%" height="100%" xlink:href="img/about.png"></image>
+                        <image class="portrait" clip-path="url(#clipPath4)" x="0%" y="-25%" width="100%" height="100%"
+                            xlink:href="img/about.png"></image>
                     </svg>
-                
+
                 </div>
                 <div class="container-right">
                     <h2>My name is <span class="second-color">Itay<i class='bx bx-wink-smile'></i></span></h2>
