--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                             </g>
                         </g>
 
-                        <image class="portrait" clip-path="url(#clipPath4)" x="0%" y="-25%" width="100%" height="100%"
-                            xlink:href="img/about.png"></image>
+                        <!-- <image class="portrait" clip-path="url(#clipPath4)" x="0%" y="-25%" width="100%" height="100%"
+                            xlink:href="img/about.png"></image> -->
                     </svg>
 
                 </div>
