--- a/index.html
+++ b/index.html
@@ -148,15 +148,12 @@
                             <g clip-path="url(#clipPath4)">
                                 <rect id="rect-background" width="800" height="900" />
                                 <rect fill="url(#Pattern)" width="800" height="900" />
-                                <image class="portrait2 blob" x="-2%" y="-20" width=100% height=100% xlink:href="img/about.png"
-                                    transform="rotate(0) translate(0, 0) rotate(0)"></image>
+                                <image class="portrait2 blob" x="-2%" y="-20" width=100% height=100%
+                                    xlink:href="img/about.png" transform="rotate(0) translate(0, 0) rotate(0)"></image>
                                 <image class="portrait" x="0%" y="5" width=100% height=100% xlink:href="img/about.png">
                                 </image>
                             </g>
                         </g>
-
-                        <!-- <image class="portrait" clip-path="url(#clipPath4)" x="0%" y="-25%" width="100%" height="100%"
-                            xlink:href="img/about.png"></image> -->
                     </svg>
 
                 </div>
