--- a/index.html
+++ b/index.html
@@ -121,13 +121,15 @@
                         viewBox="0 0 800 800" id="loader">
                         <defs>
                             <clipPath id="clipPath4">
-                                <circle class="blob" cx="450" cy="170" r="225"
+                                <circle class="blob" cx="200" cy="235" r="15"
+                                transform="rotate(0) translate(0, 0) rotate(0)" />
+                                <circle class="blob" cx="470" cy="235" r="225"
                                     transform="rotate(0) translate(0, 0) rotate(0)" />
                                 <circle class="blob" cx="400" cy="480" r="280"
                                     transform="rotate(0) translate(0, 0) rotate(0)" />
                                 <circle class="blob" cx="600" cy="230" r="35"
                                     transform="rotate(0) translate(0, 0) rotate(0)" />
-                                <circle class="blob" cx="150" cy="620" r="105"
+                                <circle class="blob" cx="195" cy="620" r="105"
                                     transform="rotate(0) translate(0, 0) rotate(0)" />
                                 <circle class="blob" cx="650" cy="680" r="15"
                                     transform="rotate(0) translate(0, 0) rotate(0)" />
