--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <defs>
                             <clipPath id="clipPath4">
                                 <circle class="blob" cx="200" cy="235" r="15"
-                                transform="rotate(0) translate(0, 0) rotate(0)" />
+                                    transform="rotate(0) translate(0, 0) rotate(0)" />
                                 <circle class="blob" cx="470" cy="235" r="225"
                                     transform="rotate(0) translate(0, 0) rotate(0)" />
                                 <circle class="blob" cx="400" cy="480" r="280"
@@ -171,9 +171,12 @@
                     <p>My forte includes working on <span class="bold main-color">IoT products</span>, motor control,
                         and closed-loop systems. I am adept at developing smart, low-power systems incorporating sleep
                         modes for optimal energy efficiency.</p>
-                    <p>I thrive on creating field-independent products that maximize energy efficiency. Let's <span
-                            class="bold second-color">connect <i class='bx bx-chat'></i></span> and explore how we can
+                    <p>I thrive on creating field-independent products that maximize energy efficiency.</p>
+
+                    <p>Let's <span class="bold second-color">connect <i class='bx bx-chat'></i></span> and explore how
+                        we can
                         drive technological innovation together.</p>
+
                 </div>
             </div>
         </div>
