--- a/index.html
+++ b/index.html
@@ -394,69 +394,34 @@
                         <div class="skills__list grid">
                             <ul>
                                 <li>Cameras and Imaging Sensors</li>
-                                <li>LiDAR (e.g., Slamtec RPLIDAR)</li>
-                                <li>Depth Sensors (e.g., Realsense, Luxonis)</li>
                                 <li>Motors/Actuators Control</li>
                                 <li>GPIO Control</li>
-                                <li>Sensor Data Acquisition (e.g., IMU, Ultrasonic)</li>
-                                <li>Communication Protocols (e.g., IIC, SPI, PWM, UART)</li>
+                                <li>Communication Protocols (e.g., I2C, SPI, UART, BLE, ESP-NOW,)</li>
                                 <li>Microcontroller Programming (e.g., Arduino, Raspberry Pi)</li>
                                 <li>Oscilloscope / Spectrum analyzer / Logic analyzer</li>
                                 <li>Electronic Circuit Design (Analog/Digital with LTspice)</li>
                                 <li>PCB Design (e.g., EasyEDA, KiCAD)</li>
                             </ul>
-
                         </div>
                     </div>
-                    <div class="skills__content skills__close">
-                        <div class="skills__header">
-                            <span class="material-symbols-outlined skills__icon">precision_manufacturing</span>
-                            <div>
-                                <h3 class="skills__title">Robotics</h3>
-                            </div>
-
-                            <i class='bx bx-chevron-down skills__arrow'></i>
-                        </div>
-
-                        <div class="skills__list grid">
-                            <ul>
-                                <li>SLAM (Simultaneous Localization and Mapping)</li>
-                                <li>Robot Operating System (ROS2)</li>
-                                <li>PID Control</li>
-                                <li>Kinematics and Dynamics</li>
-                                <li>Robot Perception</li>
-                                <li>Path Planning</li>
-                                <li>Robot Vision Integration</li>
-                                <li>Robot Hardware Integration (e.g., motor controllers, sensors)</li>
-                                <li>Robot Behavior Programming</li>
-                            </ul>
-                        </div>
-                    </div>
-
                 </div>
                 <div>
 
                     <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="bx bx-wrench skills__icon"></i>
-
                             <div>
                                 <h3 class="skills__title">Software Development and Tools</h3>
                             </div>
-
                             <i class='bx bx-chevron-down skills__arrow'></i>
                         </div>
-
                         <div class="skills__list grid">
                             <ul>
                                 <li>Git and Version Control</li>
-                                <li>Linux/Unix Environments</li>
-                                <li>Virtual Environment(e.g., WSL, WMware)</li>
-                                <li>IDEs (e.g., Visual Studio Code, PyCharm)</li>
+                                <li>IDEs (e.g., Simplicity Studio, Visual Studio Code (PlatformIO), PyCharm)</li>
                                 <li>Debugging and Profiling</li>
                                 <li>Networking</li>
                             </ul>
-
                         </div>
                     </div>
 
@@ -467,46 +432,19 @@
                             <div>
                                 <h3 class="skills__title">Programming Languages</h3>
                             </div>
-
                             <i class='bx bx-chevron-down skills__arrow'></i>
                         </div>
 
                         <div class="skills__list grid">
-
                             <ul>
+                                <li>C</li>
+                                <li>C++</li>
                                 <li>Python</li>
-                                <li>C/C++</li>
-                                <li>C#</li>
-                                <li>MATLAB</li>
-                                <li>JavaScript</li>
-                                <li>Assembly</li>
                                 <li>SQL</li>
                                 <li>HTML</li>
+                                <li>JavaScript</li>
                                 <li>CSS</li>
-                            </ul>
-
-                        </div>
-                    </div>
-
-                    <div class="skills__content skills__close">
-                        <div class="skills__header">
-                            <span class="material-symbols-outlined skills__icon">book_4</span>
-                            <div>
-                                <h3 class="skills__title">Main Libraries</h3>
-                            </div>
-
-                            <i class='bx bx-chevron-down skills__arrow'></i>
-                        </div>
-
-                        <div class="skills__list grid">
-                            <ul>
-                                <li>OpenCV</li>
-                                <li>Open3D</li>
-                                <li>TensorFlow</li>
-                                <li>Pandas</li>
-                                <li>Matplotlib</li>
-                                <li>Numpy</li>
-                                <li>TkInter</li>
+                                <li>C#</li>
                             </ul>
                         </div>
                     </div>
@@ -514,14 +452,11 @@
                     <div class="skills__content skills__close">
                         <div class="skills__header">
                             <span class="material-symbols-outlined skills__icon">self_improvement</span>
-
                             <div>
                                 <h3 class="skills__title">Soft Skills</h>
                             </div>
-
                             <i class='bx bx-chevron-down skills__arrow'></i>
                         </div>
-
                         <div class="skills__list grid">
 
                             <ul>
