--- a/index.html
+++ b/index.html
@@ -326,71 +326,16 @@
             </div>
 
             <div class="skills__container grid">
-
                 <div>
-                    <div class="skills__content   skills__close">
-                        <div class="skills__header ">
-                            <span class="material-symbols-outlined skills__icon">visibility</span>
-                            <div>
-                                <h3 class="skills__title">Computer Vision</h3>
-                            </div>
-                            <i class='bx bx-chevron-down skills__arrow'></i>
-                        </div>
-
-                        <div class="skills__list grid">
-                            <ul>
-                                <li>Calibration Techniques</li>
-                                <li>Image Preprocessing</li>
-                                <li>Noise Reduction</li>
-                                <li>DSP filters</li>
-                                <li>Object Detection</li>
-                                <li>Image Segmentation</li>
-                                <li>Feature Extraction</li>
-                                <li>Pose Estimation</li>
-                                <li>Point Cloud Processing</li>
-                                <li>Stereo Vision</li>
-                                <li>VR/AR Development Platforms (e.g., Unity3D)</li>
-                            </ul>
-
-                        </div>
-                    </div>
-
-                    <div class="skills__content skills__close">
-                        <div class="skills__header">
-                            <i class="bx bx-brain skills__icon"></i>
-
-                            <div>
-                                <h3 class="skills__title">Machine Learning and Deep Learning</h3>
-                            </div>
-
-                            <i class='bx bx-chevron-down skills__arrow'></i>
-                        </div>
-
-                        <div class="skills__list grid">
-
-                            <ul>
-                                <li>Data Preprocessing</li>
-                                <li>Model Training</li>
-                                <li>Hyperparameter Tuning</li>
-                                <li>Model Evaluation</li>
-                                <li>Convolutional Neural Networks (CNNs)</li>
-                                <li>Recurrent Neural Networks (RNNs)</li>
-                                <li>Transfer Learning</li>
-                            </ul>
-                        </div>
-                    </div>
-
-
+                    
                     <div class="skills__content skills__close">
                         <div class="skills__header">
                             <span class="material-symbols-outlined skills__icon">memory</span>
                             <div>
                                 <h3 class="skills__title">Hardware</h3>
                             </div>
-
                             <i class='bx bx-chevron-down skills__arrow'></i>
                         </div>
-
                         <div class="skills__list grid">
                             <ul>
                                 <li>Cameras and Imaging Sensors</li>
@@ -404,6 +349,51 @@
                             </ul>
                         </div>
                     </div>
+
+                    <div class="skills__content   skills__close">
+                        <div class="skills__header ">
+                            <span class="material-symbols-outlined skills__icon">visibility</span>
+                            <div>
+                                <h3 class="skills__title">Computer Vision</h3>
+                            </div>
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+                        <div class="skills__list grid">
+                            <ul>
+                                <li>Label Studio</li>
+                                <li>Active Learning Loop</li>
+                                <li>Calibration Techniques</li>
+                                <li>Image Preprocessing</li>
+                                <li>Noise Reduction</li>
+                                <li>DSP filters</li>
+                                <li>Object Detection</li>
+                                <li>Image Segmentation</li>
+                                <li>Feature Extraction</li>
+                                <li>Pose Estimation</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <i class="bx bx-brain skills__icon"></i>
+                            <div>
+                                <h3 class="skills__title">Machine Learning and Deep Learning</h3>
+                            </div>
+                            <i class='bx bx-chevron-down skills__arrow'></i>
+                        </div>
+                        <div class="skills__list grid">
+                            <ul>
+                                <li>Data Preprocessing</li>
+                                <li>Model Training</li>
+                                <li>Model Evaluation</li>
+                                <li>Convolutional Neural Networks (CNNs)</li>
+                                <li>Recurrent Neural Networks (RNNs)</li>
+                                <li>Transfer Learning</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
                 <div>
 
