--- a/index.html
+++ b/index.html
@@ -327,28 +327,30 @@
 
             <div class="skills__container grid">
                 <div>
-                    
+
                     <div class="skills__content skills__close">
                         <div class="skills__header">
                             <span class="material-symbols-outlined skills__icon">memory</span>
                             <div>
-                                <h3 class="skills__title">Hardware</h3>
+                                <h3 class="skills__title">Advanced Hardware and Microcontroller Expertise</h3>
                             </div>
                             <i class='bx bx-chevron-down skills__arrow'></i>
                         </div>
                         <div class="skills__list grid">
                             <ul>
-                                <li>Cameras and Imaging Sensors</li>
-                                <li>Motors/Actuators Control</li>
-                                <li>GPIO Control</li>
-                                <li>Communication Protocols (e.g., I2C, SPI, UART, BLE, ESP-NOW,)</li>
-                                <li>Microcontroller Programming (e.g., Arduino, Raspberry Pi)</li>
-                                <li>Oscilloscope / Spectrum analyzer / Logic analyzer</li>
-                                <li>Electronic Circuit Design (Analog/Digital with LTspice)</li>
-                                <li>PCB Design (e.g., EasyEDA, KiCAD)</li>
+                                <li>In-depth Microcontroller Programming and Architecture (e.g., Silicon Labs EFR32, ESP32)</li>
+                                <li>Advanced Motors and Actuators Control Systems</li>
+                                <li>Expertise in GPIO and Complex Communication Protocols (I2C, SPI, UART, BLE, ESP-NOW)</li>
+                                <li>Comprehensive Use of Diagnostic Tools (Oscilloscope, Spectrum Analyzer, Logic Analyzer)</li>
+                                <li>Electronic Circuit Design and Simulation (Analog/Digital with LTspice)</li>
+                                <li>Energy-efficient and Low-power System Design</li>
+                                <li>Design and Implementation of FOTA (Firmware Over-The-Air) Mechanisms</li>
+                                <li>Real-Time Operating Systems (RTOS) for Embedded Applications</li>
+                                <li>Advanced Debugging and Problem-Solving Skills in Embedded Systems</li>
+                                <li>Integration of Sensors and IoT Devices for Data Acquisition and Analysis</li>
                             </ul>
                         </div>
-                    </div>
+                    </div>                    
 
                     <div class="skills__content   skills__close">
                         <div class="skills__header ">
@@ -378,7 +380,7 @@
                         <div class="skills__header">
                             <i class="bx bx-brain skills__icon"></i>
                             <div>
-                                <h3 class="skills__title">Machine Learning and Deep Learning</h3>
+                                <h3 class="skills__title">Deep Learning</h3>
                             </div>
                             <i class='bx bx-chevron-down skills__arrow'></i>
                         </div>
@@ -388,14 +390,9 @@
                                 <li>Model Training</li>
                                 <li>Model Evaluation</li>
                                 <li>Convolutional Neural Networks (CNNs)</li>
-                                <li>Recurrent Neural Networks (RNNs)</li>
-                                <li>Transfer Learning</li>
                             </ul>
                         </div>
                     </div>
-
-                </div>
-                <div>
 
                     <div class="skills__content skills__close">
                         <div class="skills__header">
@@ -407,13 +404,17 @@
                         </div>
                         <div class="skills__list grid">
                             <ul>
-                                <li>Git and Version Control</li>
+                                <li>Advanced Git and Version Control Systems</li>
                                 <li>IDEs (e.g., Simplicity Studio, Visual Studio Code (PlatformIO), PyCharm)</li>
-                                <li>Debugging and Profiling</li>
-                                <li>Networking</li>
+                                <li>Debugging, Profiling, and Code Analysis Tools</li>
+                                <li>Networking and Internet Protocols</li>
+                                <li>Unit Testing and Test Automation Frameworks</li>
+                                <li>Static Code Analysis and Code Quality Tools</li>
+                                <li>Scripting and Automation (e.g., Python, Shell Scripts)</li>
+                                <li>Cloud Services and IoT Platforms (e.g., AWS IoT Core)</li>
                             </ul>
                         </div>
-                    </div>
+                    </div>                    
 
                     <div class="skills__content skills__close">
                         <div class="skills__header">
@@ -450,7 +451,7 @@
                         <div class="skills__list grid">
 
                             <ul>
-                                <li>Linear algebra / Statistics / Calculus</li>
+                                <li>Creativity</li>
                                 <li>Markdown</li>
                                 <li>Technical Writing / Documentation</li>
                                 <li>Presentation Skills</li>
@@ -458,13 +459,14 @@
                                 <li>Critical Thinking</li>
                                 <li>Communication</li>
                                 <li>Teamwork / Leadership</li>
-                                <li>Creativity</li>
                                 <li>Time Management</li>
+                                <li>Linear algebra / Statistics / Calculus</li>
                             </ul>
                         </div>
                     </div>
-                </div>
 
+
+                </div>
             </div>
         </div>
     </section>
