--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                                 <i class='bx bxs-calendar'></i>
                                 Sep 2020 - Dec 2021
                             </div>
-                            <h3 class="qualification__title">Electronics & Embedded Engineer</h3>
+                            <h3 class="qualification__title">Embedded & Electronics Engineer</h3>
                             <span class="qualification__subtitle">Liron Engineering LTD.</span>
                             <span class="qualification__location">Tel Aviv, Israel</span>
                             <br> <!-- Line break here -->
