--- a/index.html
+++ b/index.html
@@ -352,6 +352,8 @@
                         </div>
                     </div>                    
 
+                    <div></div>
+                    
                     <div class="skills__content   skills__close">
                         <div class="skills__header ">
                             <span class="material-symbols-outlined skills__icon">visibility</span>
