--- a/index.html
+++ b/index.html
@@ -326,8 +326,6 @@
             </div>
 
             <div class="skills__container grid">
-                <div>
-
                     <div class="skills__column">
                         <div class="skills__content skills__close">
                             <div class="skills__header">
@@ -399,6 +397,8 @@
                         </div>
                     </div>
 
+                    <div></div>
+                    
                     <div class="skills__column">
 
                         <div class="skills__content skills__close">
@@ -473,12 +473,7 @@
                         </div>
                     </div>
 
-
-
                 </div>
-            </div>
-
-
         </div>
     </section>
 
