--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 </div>
 
                 <div>
-                    <div class="skills__column">
+                    <!-- <div class="skills__column"> -->
 
                         <div class="skills__content skills__close">
                             <div class="skills__header">
@@ -469,7 +469,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    <!-- </div> -->
                 </div>
                 
 
