--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                             <div class="skills__header">
                                 <span class="material-symbols-outlined skills__icon">memory</span>
                                 <div>
-                                    <h3 class="skills__title">Advanced Hardware and Microcontroller Expertise</h3>
+                                    <h3 class="skills__title">Hardware and Microcontroller Expertise</h3>
                                 </div>
                                 <i class='bx bx-chevron-down skills__arrow'></i>
                             </div>
