--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
                 <div>
 
-                    <div class="skills__column">
+                    <!-- <div class="skills__column"> -->
                         <div class="skills__content skills__close">
                             <div class="skills__header">
                                 <span class="material-symbols-outlined skills__icon">memory</span>
@@ -396,7 +396,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    <!-- </div> -->
 
                 </div>
 
