--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="container-left">
                         <div class="home-content">
                             <h2>Hi there!</h2>
-                            <div id="intro-text">I Am <span class="typing-text">Embedded</span><br>Engineer.
+                            <div id="intro-text">I Am <span class="typing-text"></span><br>Engineer.
                             </div>
                             <div class="text">
 
