--- a/index.html
+++ b/index.html
@@ -309,6 +309,11 @@
 
                     <!-- Deputy Director -->
                     <div class="qualification__data">
+                        <div class="empty-container"></div>
+                        <div class="timeLine_container before_timeline">
+                            <span class="qualification__rounder"></span>
+                            <span class="qualification__line"></span>
+                        </div>
                         <div>
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
@@ -316,12 +321,12 @@
                             </div>
                             <h3 class="qualification__title">Deputy Director</h3>
                             <span class="qualification__subtitle">Galaxy Ofir Print</span>
-                            <span class="qualification__location">Herzliya Area, Israel</span>
+                            <span class="qualification__location">Herzliya, Israel</span>
                             <br> <!-- Line break here -->
                             <img src="icons/companies/galaxy_ofir_print.png" alt="Galaxy Ofir Print Logo"
                                 class="qualification__logo">
                         </div>
-                        <div>
+                        <div class="timeLine_container after_timeline">
                             <span class="qualification__rounder"></span>
                             <span class="qualification__line"></span>
                         </div>
