--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 <i class='bx bxs-calendar'></i>
                                 Jun 2023 - Present
                             </div>
-                            <h3 class="qualification__title">Firmware Engineer</h3>
+                            <h3 class="qualification__title">Embedded Software Engineer</h3>
                             <span class="qualification__subtitle">Phytech</span>
                             <span class="qualification__location">Kfar Sava, Israel</span>
                             <br> <!-- Line break here -->
@@ -219,7 +219,7 @@
                         <div>
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
-                                Sep 2022 - May 2023
+                                Sep 2022 - Jun 2023
                             </div>
                             <h3 class="qualification__title">Software Engineer</h3>
                             <span class="qualification__subtitle">Tunity | an iSpot Company</span>
@@ -237,7 +237,7 @@
                         <div>
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
-                                Dec 2021 - Sep 2022
+                                Oct 2021 - Sep 2022
                             </div>
                             <h3 class="qualification__title">Embedded Software Engineer</h3>
                             <span class="qualification__subtitle">Kaufman R&D</span>
@@ -261,9 +261,9 @@
                         <div>
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
-                                Sep 2020 - Dec 2021
+                                Nov 2019 - Oct 2021
                             </div>
-                            <h3 class="qualification__title">Embedded & Electronics Engineer</h3>
+                            <h3 class="qualification__title">Embedded Software Engineer</h3>
                             <span class="qualification__subtitle">Liron Engineering LTD.</span>
                             <span class="qualification__location">Tel Aviv, Israel</span>
                             <br> <!-- Line break here -->
@@ -281,7 +281,7 @@
                         <div>
                             <div class="qualification__calendar">
                                 <i class='bx bxs-calendar'></i>
-                                Aug 2019 - Sep 2020
+                                Nov 2018 - Sep 2020
                             </div>
                             <h3 class="qualification__title">Computer Vision (student) Engineer</h3>
                             <span class="qualification__subtitle">ChameleonVISION</span>
