--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     </div>
 
     <!-- CONTACT SECTION -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
         <div class="container">
             <h2 class="section__title">Contact Me</h2>
             <div class="contact-content">
@@ -562,7 +562,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer with social media icons -->
     <!-- Update the links to point to your social media profiles -->
