--- a/index.html
+++ b/index.html
@@ -159,12 +159,27 @@
                 </div>
                 <div class="container-right">
                     <h2>My name is <span class="second-color">Itay<i class='bx bx-wink-smile'></i></span></h2>
-                    <p>Hello! I am an Embedded/Firmware Software Engineer with a focus on <span class="bold main-color">C, C++,</span> and <span class="bold main-color">Python</span>. Bringing over 5 years of experience to the table, I offer comprehensive expertise throughout the entire product development lifecycle, from the initial concept to mass production.</p>
-                    <p>In leading embedded development projects, my strengths in code architecture and design become particularly evident. This is complemented by my adept management of <span class="bold main-color">complex logic</span> and <span class="bold main-color">intricate state machines</span>. Additionally, I have developed a specialization in RF systems, with a focus on crafting energy-efficient and low-power solutions. This holistic approach is vital for developing robust and scalable embedded solutions from scratch.</p>
-                    <p>My areas of specialization extend to <span class="bold main-color">IoT products</span>, motor control, closed-loop systems, and RF low-power systems. I have a unique skill in developing intelligent systems that integrate advanced technologies, sleep modes, and ULP (Ultra Low Power Co-processors) to achieve <span class="bold main-color">optimum energy efficiency</span>. My experience in programming these ULP co-processors using assembly language is a key aspect of my ability to create highly efficient and sustainable solutions.</p>
-                    <p>My passion is centered around designing field-independent products and RF systems that serve as benchmarks in energy efficiency.</p>
+                    <p>Hello! I am an Embedded/Firmware Software Engineer with a focus on <span
+                            class="bold main-color">C, C++,</span> and <span class="bold main-color">Python</span>.
+                        Bringing over 5 years of experience to the table, I offer comprehensive expertise throughout the
+                        entire product development lifecycle, from the initial concept to mass production.</p>
+                    <p>In leading embedded development projects, my strengths in code architecture and design become
+                        particularly evident. This is complemented by my adept management of <span
+                            class="bold main-color">complex logic</span> and <span class="bold main-color">intricate
+                            state machines</span>. Additionally, I have developed a specialization in RF systems, with a
+                        focus on crafting energy-efficient and low-power solutions. This holistic approach is vital for
+                        developing robust and scalable embedded solutions from scratch.</p>
+                    <p>My areas of specialization extend to <span class="bold main-color">IoT products</span>, motor
+                        control, closed-loop systems, and RF low-power systems. I have a unique skill in developing
+                        intelligent systems that integrate advanced technologies, sleep modes, and ULP (Ultra Low Power
+                        Co-processors) to achieve <span class="bold main-color">optimum energy efficiency</span>. My
+                        experience in programming these ULP co-processors using assembly language is a key aspect of my
+                        ability to create highly efficient and sustainable solutions.</p>
+                    <p>My passion is centered around designing field-independent products and RF systems that serve as
+                        benchmarks in energy efficiency.</p>
 
-                    <p>Let's <span class="bold second-color">connect<i class='bx bx-chat'></i></span> and discover how our collaboration can propel technological innovation forward.</p>
+                    <p>Let's <span class="bold second-color">connect<i class='bx bx-chat'></i></span> and discover how
+                        our collaboration can propel technological innovation forward.</p>
                 </div>
 
 
@@ -357,7 +372,8 @@
                         </div>
                         <div class="skills__list grid">
                             <ul>
-                                <li>In-depth Microcontroller Programming and Architecture (e.g., Espressif, Silicon Labs, and Microchip MCUs)</li>
+                                <li>In-depth Microcontroller Programming and Architecture (e.g., Espressif, Silicon
+                                    Labs, and Microchip MCUs)</li>
                                 <li>Design and Implementation of FOTA (Firmware Over-The-Air) Mechanisms</li>
                                 <li>Advanced Motors and Actuators Control Systems</li>
                                 <li>Expertise in GPIO and Complex Communication Protocols (I2C, SPI, UART, BLE,
@@ -365,7 +381,8 @@
                                 <li>Comprehensive Use of Diagnostic Tools (Oscilloscope, Spectrum Analyzer, Logic
                                     Analyzer)</li>
                                 <li>Electronic Circuit Design and Simulation (Analog/Digital with LTspice)</li>
-                                <li>Energy-efficient and Low-power System Design, including ULP (Ultra Low Power Co-processor).</li>
+                                <li>Energy-efficient and Low-power System Design, including ULP (Ultra Low Power
+                                    Co-processor).</li>
                                 <li>Real-Time Operating Systems (RTOS) for Embedded Applications</li>
                                 <li>Advanced Debugging and Problem-Solving Skills in Embedded Systems</li>
                                 <li>Integration of Sensors and IoT Devices for Data Acquisition and Analysis</li>
